--- a/index.css
+++ b/index.css
@@ -3,3 +3,27 @@ h1{
     color: pink;
     text-align: center;
 }
+
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.imagem1{
+    width: 70px;
+    height: 55px;
+}
+
+.imagem2{
+    width: 70px;
+    height: 55px;
+}
+  
+.imagem3 {
+    width: 70px;
+    height: 55px;
+}
