--- a/index.css
+++ b/index.css
@@ -6,24 +6,25 @@ h1{
 
 .flex-container {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    padding: 0;
-    margin: 0;
-    list-style: none;
+    flex-direction: column; /* altera a direção dos itens para vertical */
+    justify-content: center;
+    align-items: center;
 }
 
 .imagem1{
-    width: 70px;
-    height: 55px;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
 }
 
 .imagem2{
-    width: 70px;
-    height: 55px;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
 }
   
 .imagem3 {
-    width: 70px;
-    height: 55px;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
 }
