--- a/index.css
+++ b/index.css
@@ -14,17 +14,20 @@ h1{
 .imagem1{
     width: 100px;
     height: 100px;
-    margin-bottom: 10px;
+    margin-right: 40px;
+    margin-bottom: 15px;
 }
 
 .imagem2{
     width: 100px;
     height: 100px;
-    margin-bottom: 10px;
+    margin-right: 40px;
+    margin-bottom: 15px;
 }
   
 .imagem3 {
     width: 100px;
     height: 100px;
-    margin-bottom: 10px;
+    margin-right: 40px;
+    margin-bottom: 15px;
 }
